Added OBD female pinout to documentation.

--- a/doc/README.tex
+++ b/doc/README.tex
@@ -20,6 +20,8 @@
 
 \documentclass[twoside]{article}
 
+\usepackage{graphicx}
+
 \usepackage{lipsum} % Package to generate dummy text throughout this template
 
 \usepackage[sc]{mathpazo} % Use the Palatino font
@@ -103,6 +105,16 @@
 %------------------------------------------------
 
 \section{Hardware}
+
+\subsection{Connectors}
+
+The OBD connector...
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=2in]{img/J1962_female}
+  \caption{OBD female connector pinout}
+\end{figure}
 
 Maecenas sed ultricies felis. Sed imperdiet dictum arcu a egestas. 
 \begin{compactitem}
