--- a/doc/README.tex
+++ b/doc/README.tex
@@ -208,19 +208,27 @@ The standard OBDII female connector has the following pinout:
 
 Elm327 accepts basically two types of input:
 \begin{compactitem}
-  \item commands: all prefixed with "AT", allowing various kind of operations on device;
-  \item data requests: allowing to retrieve data from the vehicle;
-  
+  \item commands: allow various kind of operations on device;
+  \item data requests: allow to retrieve data from the vehicle.
 \end{compactitem}
+
+Elm327 is case-insensitive and does not care about spacing symbols (tabs or white spaces).
+Nevertheless, in this document will be used uppercases and a correct amount of spacing, with the aim of improving readability.
 
 \subsubsection{Basic Commands}
 
+All commands are prefixed with "AT". It is possible to distinguish between four classes of commands:
 \begin{compactitem}
   \item general commands;
   \item OBD commands;
   \item protocols specific commands;
   \item miscellaneous commands.
 \end{compactitem}
+
+The syntax for commands is, usally
+\begin{lstlisting}[language=bash]
+AT CMD [param]
+\end{lstlisting}
 
 \begin{lstlisting}[language=bash]
 AT Z
@@ -250,7 +258,6 @@ Sets the protocol to \emph{x}, in particular, by default:
   \item C USER2 CAN (11* bit ID, 50* Kbaud).
 \end{compactitem}
 
-
 \subsubsection{Basic Data}
 
 Each data request has three parameters associated:
@@ -271,6 +278,82 @@ MODE PID VALUE
 where \emph{VALUE} has different fixed sizes for different data.
 \emph{VALUE}'s length is \emph{n}-byte, each one separated by a space symbol.
 
+\begin{lstlisting}[language=bash]
+01 01
+\end{lstlisting}
+Request the list of error codes (\emph{DTCs}, \emph{Diagnostic Trouble Codes}).
+This returns a 4 byte response, like
+\begin{lstlisting}[language=bash]
+41 01 AA BB CC DD
+\end{lstlisting}
+where:
+\begin{compactitem}
+  \item \emph{41 01}: represents the response to the request;
+  \item \emph{AA}: is the number of trouble codes:
+  \begin{compactitem}
+    \item most significant bit: Multifunction Indicator Lamp (MIL, aka Check Engine Light) has been turned on;
+    \item remaining bits: number of stored trouble codes, flagged in the ECU (Engine Control Unit);
+  \end{compactitem}
+  \item \emph{BB CC DD}: information about the availability and completeness of certain on-board tests, with different interpretations in case of spark or compression ignition engines. More details on SAE J1979 documentation.
+\end{compactitem}
+
+So, with the \emph{AA} value set to \emph{81} hex (\emph{10000001} bin) it is possible to recognize that there is one trouble code stored which turned on the Check Engine Light.
+
+\begin{table}[H]
+\centering
+\begin{tabular}{llr}
+\multicolumn{3}{c}{BB} \\
+\toprule
+Test & Available & Incomplete \\
+\midrule
+Misfire & B0 & B4 \\          
+Fuel System & B1 & B5 \\
+Components & B2 & B6 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{llr}
+\multicolumn{3}{c}{CC, DD Spark Ignition} \\
+\toprule
+Test & Avail. & Incompl. \\
+\midrule
+Catalyst & C0 & D0 \\
+Heated Catalyst & C1 & D1 \\
+Evaporative System & C2 & D2 \\
+Secondary Air System & C3 & D3 \\
+A/C Refrigerant & C4 & D4 \\
+Oxygen Sensor & C5 & D5 \\
+Oxygen Sensor Heater & C6 & D6 \\
+EGR System & C7 & D7 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{llr}
+\multicolumn{3}{c}{CC, DD Compression Ignition} \\
+\toprule
+Test & Avail. & Incompl. \\
+\midrule
+NMHC Cat & C0 & D0 \\
+NOx/SCR Monitor & C1 & D1 \\
+Boost Pressure & C3 & D3 \\
+Exhaust Gas Sensor & C5 & D5 \\
+PM filter monitoring & C6 & D6 \\
+EGR and/or VVT System & C7 & D7 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+
+
+Response should be interpreted as a bit map.
+
 \subsubsection{Communication Example}
 We will use a fake Elm327 with a v1.5 firmware.
 When connected, it is possible to launch the command
@@ -282,16 +365,6 @@ This command will reboot the module and print out the device name and firmware v
 \begin{lstlisting}[language=bash]
 ELM327 v1.5
 \end{lstlisting}
-
-It is now possible, for example, to request the list of error codes (\emph{DTCs}, \emph{Diagnostic Trouble Codes}), by typing
-\begin{lstlisting}[language=bash]
-01 01
-\end{lstlisting}
-This command returns a 4 byte response, like
-\begin{lstlisting}[language=bash]
-01 01 BE 1F A8 13
-\end{lstlisting}
-
 
 \subsection{Linux/BlueZ}
 
