--- a/doc/README.tex
+++ b/doc/README.tex
@@ -407,6 +407,84 @@ EGR and/or VVT System & C7 & D7 \\
 \section{FlexMeetsObd}
 
 \subsection{PC}
+
+When the PC software is launched, the user will obtain the Welcome Window shown in figure.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{img/GUI/welcome_window}
+  \caption{Welcome window}
+\end{figure}
+
+The first step is to configure the serial port, through \emph{Configure > Serial Configuration}.
+
+Remember to set appropriate permissions to the file descriptor associated to the serial port in \emph{/dev/} folder.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{img/GUI/serial_port_configuration}
+  \caption{Serial port configuration window}
+\end{figure}
+
+Monitors are sub-windows that will be drawn inside the dark grey region of the main window. Each monitor is used to represent the vehicle data associated to it and some additional information.
+
+From each monitor is possible to open a new window containing it's plot diagram, which shows the last received samples.
+
+For monitors management, click on \emph{View > Select Monitors} or directly on \emph{Select Monitors} on the right bar menu.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=2.2in]{img/GUI/monitor_selection}
+  \caption{Monitor selection window}
+\end{figure}
+
+Once the monitors are chose, the main window will be populated.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{img/GUI/monitor_created}
+  \caption{Mainwindow after monitor creation}
+\end{figure}
+
+At this point, monitor has inconsistent values.
+
+It is possible to move monitors inside the window. To make an automatic monitors alignment, click on \emph{View > Tile Monitors} or on \emph{Tile Monitors} on the left bar.
+
+It's time to enable the serial connection and connect the Flex to retrieve data.
+
+The coloured dots in the status bar, in bottom right of the window, show the status of the Serial, Flex and Vehicle links.
+Pay attention to them, in order to detect if something is going wrong.
+
+To enable [disable] serial device, click on \emph{Devices > Serial Enable [Disable]} or on \emph{Serial Enable [Disable]} on the left bar.
+The Serial dot should become green, otherwise, check if the serial device is properly connected and permissions are correct.
+
+To establish the connection with the Flex, click on \emph{Devices > Bridge Connect} or on \emph{Bridge Connect} on the left bar.
+The Flex dot should become green, otherwise, check if the serial configuration parameters are compatible with Flex's ones, Flex is powered on, Flex is in a consistent state and Flex is correctly connected to PC.
+
+Not it is possible to request the Flex to perform a Bluetooth inquiry, searching for the Elm327 device. Inquiry results are presented to the user, after clicking on \emph{Devices > Bridge Inquiry} or on \emph{Bridge Inquiry} on the left bar.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=2.8in]{img/GUI/bluetooth_scan_results}
+  \caption{Bluetooth scan results}
+\end{figure}
+
+Once the device is chosen, data Flex will periodically send data which will be shown to the user.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{img/GUI/sampling_monitor}
+  \caption{Monitor appearance while sampling}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{img/GUI/sampling_plot}
+  \caption{Plot appearance while sampling}
+\end{figure}
+
+It is always possible to add new monitors or remove monitors from main window, also while sampling.
+
 \subsection{Flex}
 \subsection{Elm327}
 
