Removed multibus board

--- a/doc/user/README.tex
+++ b/doc/user/README.tex
@@ -144,13 +144,13 @@ Flex Light functionalities can be extended with the Multibus board which provide
 
 In particular, in this project will be used the two UART ports.
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=2.6in]{img/flex101_presentation}
-  \caption{\textit{Flex Multibus} daughter board}
-\end{figure}
+%\begin{figure}[H]
+%  \centering
+%  \includegraphics[width=2.6in]{img/flex101_presentation}
+%  \caption{\textit{Flex Multibus} daughter board}
+%\end{figure}
 
-Another daughter board which extends Flex Light's functionalities is the Flex Demo Board.
+%Another daughter board which extends Flex Light's functionalities is the Flex Demo Board.
 
 \begin{figure}[H]
   \centering
@@ -502,7 +502,9 @@ This data will be shown to the user similarly to how is shown in figures.
 
 It is always possible to add new monitors or remove monitors from main window, also while sampling.
 
-\subsection{Flex Multibus}
+\subsection{Flex Light}
+
+DESCRIPTION OF FLEX LIGHT CONNECTION TO CAR AND TO PC
 
 \subsection{Flex Demo Board Standalone}
 
