Removed second author.

--- a/doc/developer/README.tex
+++ b/doc/developer/README.tex
@@ -61,7 +61,7 @@
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
-\author{Alessio Balsini, David Librera} % Your name
+\author{Alessio Balsini, a.balsini@sssup.it} % Your name
 
 \date{\normalsize\today} % Today's date or a custom date
 
