Added Giovanni C. thanks.

--- a/doc/user/README.tex
+++ b/doc/user/README.tex
@@ -609,7 +609,11 @@ Fuel:        48
 \end{lstlisting}
 
 It is possible to scroll the menu by pressing first two buttons (scroll down) of the last two buttons (scroll up).
-
+\\
+\\
+\emph{
+Many thanks goes to my friend Giovanni C., who bravely allowed me to use his new OBDII compatible car for some days and making it possible to perform all the testing phase of this project.
+}
 %\begin{table}[H]
 %\caption{Example table}
 %\centering
